--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
   },
   "dependencies": {
     "@nestjs/common": "^7.5.1",
+    "@nestjs/config": "^0.6.3",
     "@nestjs/core": "^7.5.1",
     "@nestjs/jwt": "^7.2.0",
     "@nestjs/passport": "^7.1.5",
     "@nestjs/platform-express": "^7.5.1",
     "@nestjs/swagger": "^4.7.13",
+    "@nestjs/typeorm": "^7.1.5",
     "@types/passport-jwt": "^3.0.4",
     "bcrypt": "^5.0.0",
     "class-transformer": "^0.3.2",
