--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ DB_TYPE=postgres
 DB_HOST=localhost
 DB_PORT=5432
 DB_USERNAME=postgres
-DB_PASSWORD=admin
+DB_PASSWORD=password
 DB_DATABASE_NAME=lms_database
 JWT_SECRET=secret@2021
 JWT_SECRET_EXPIRES_IN=3600
